[package]
name = "fake-volume"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.16.0"
solana-client = "1.16.0"
solana-program = "1.16.0"
solana-transaction-status = "1.16.0"
solana-account-decoder = "1.16.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
rand_core = "0.5.1"
bs58 = "0.5"
tokio = { version = "1.28.0", features = ["full"] }
chrono = "0.4"
anyhow = "1.0.70"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"] }
lazy_static = "1.5.0"
anchor-lang = "0.28"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures-util = "0.3"
bincode = "1.3"
base64 = "0.21"
uuid = "1.17.0"
